--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,30 @@ db.sqlite3
 .env
 media/
 staticfiles/
-*.log
+*.logvenv/
+venv/
+
+# Virtual environments
+venv/
+env/
+.venv/
+
+# Django
+*.pyc
+__pycache__/
+db.sqlite3
+*.sqlite3
+media/
+staticfiles/
+
+# Environment variables
+.env
+.env.local
+.env.production
+
+# IDE
+.vscode/
+.idea/
+
+# OS
+.DS_Store
