--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,50 @@
 # Python
 *.pyc
 __pycache__/
-*.log
+*.py[cod]
+*$py.class
 
 # Virtual environments
 venv/
 env/
 .venv/
+ENV/
+env.bak/
+venv.bak/
 
 # Django
+*.log
 db.sqlite3
 *.sqlite3
 media/
 staticfiles/
+static/
 
 # Environment variables
 .env
 .env.local
 .env.production
+.env.example
 
 # IDE
 .vscode/
 .idea/
+*.swp
+*.swo
+*~
 
 # OS
 .DS_Store
+Thumbs.db
+
+# Tailwind
+tailwindcss
+tailwindcss-*
+node_modules/
+
+# Videos
+videos/
+*.mp4
+*.mp3
+*.wav
+*.m4a
