--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 Django==5.2.7
 python-dotenv==1.1.1
 dj-database-url
-psycopg2-binary==2.9.5
+psycopg
 gunicorn
 whitenoise
 django-encrypted-model-fields==0.6.5
+django-allauth
 pillow==11.3.0
 moviepy==2.2.1
 openai==2.3.0
