--- a/requirements.txt
+++ b/requirements.txt
@@ -14,4 +14,5 @@ openai==2.3.0
 requests==2.32.3
 beautifulsoup4==4.12.3
 openpyxl==3.1.4
-django-widget-tweaksdjango-encrypted-model-fields
+django-widget-tweaks
+django-encrypted-model-fields
